some init text changes

--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,61 +1,30 @@
 experiences:
 
-- place: "University of Washington"
+- place: "KAIST AI"
   time: "2023 - now"
-  title: "Assistant Professor"
-  subtitle: "Information School"
-  category: "work"
-
-- place: "Stanford"
-  time: "2020 - 2023"
-  title: "Postdoc"
-  subtitle: "MS&E"
-  category: "work"
-
-- place: "MIT"
-  time: "2014 - 2020"
   title: "Ph.D. Student"
-  subtitle: "Media Lab, Laboratory for Social Machines"
+  subtitle: "Graduate School of AI"
   category: "school"
+
+- place: "Stanford University"
+  time: "2021 - 2023"
+  title: "M.S. Student"
+  subtitle: "Computer Science<br/>Distinction in Research"
+  category: "school"
+
+- place: "Google"
+  time: "2013 - 2021"
+  title: "Senior Software Engineer"
+  subtitle: "Google Assistant<br/>Google Research<br/>Display Ads"
+  category: "work"
 
 - place: "Facebook"
-  time: "Summer 2019"
-  title: "Research Scientist, Intern"
-  subtitle: "Core Data Science"
+  time: "Aug 2012 - Nov 2012"
+  title: "Software Engineer, Intern"
+  subtitle: "Messages Backend"
   category: "work"
 
-- place: "LinkedIn"
-  time: "Summer 2016"
-  title: "Research Scientist, Intern"
-  subtitle: "Experimentation Group"
-  category: "work"
-
-- place: "Amazon"
-  time: "Summer 2014"
-  title: "Machine Learning Scientist, Intern"
-  subtitle: "Scalable Machine Learning Group"
-  category: "work"
-
-- place: "Yahoo! Labs"
-  time: "Feb-Aug 2013"
-  title: "Research Scientist, Intern"
-  subtitle: "Social Media Engagement Group"
-  category: "work"
-
-- place: "EM-DMKM"
-  time: "Sep 2011 – Aug 2013"
-  title: "M.Sc. Student"
-  subtitle: "Masters in Data Mining and Knowledge Management <br/> Year 1: University Pierre et Marie Curie <br/> Year 2: Universitat Politecnica de Catalunya <br/>"
-  category: "school"
-
-- place: "Jozef Stefan Institute"
-  time: "Jan-Aug 2011"
-  title: "Research Assistant"
-  subtitle: "Department of Knowledge Technologies"
-  category: "work"
-
-- place: "Staffordshire University"
-  time: "2007 - 2010"
-  title: "B.Sc. Student"
-  subtitle: "Computing Science <br/> First Class Honours"
+- place: "Cornell University"
+  title: "B.S. Student"
+  subtitle: "Computing Science<br/>Magna cum laude"
   category: "school"
