--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,9 +1,9 @@
-name: "Martin Saveski"
-title: "Assistant Professor, University of Washington"
-email: "msaveski [AT] uw.edu"
-profile_pic: "/assets/profile-pics/SU_small.jpg"
-twitter: "https://twitter.com/msaveski"
-linkedin: "https://www.linkedin.com/in/msaveski"
-github: "https://github.com/msaveski"
-google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
-google_analystics_tracking_id: 'UA-46778883-1'
+name: "Kyuyoung Kim"
+title: "Ph.D. student, KAIST AI"
+email: "kykim [AT] cs.stanford.edu"
+profile_pic: "/assets/profile-pics/portrait.png"
+# twitter: "https://twitter.com/msaveski"
+linkedin: "https://www.linkedin.com/in/kykim0"
+github: "https://github.com/kykim0"
+google_scholar: "https://scholar.google.com/citations?user=9iLSqKAAAAAJ&hl=en"
+# google_analystics_tracking_id: 'UA-46778883-1'
