--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,154 +1,69 @@
 papers:
 
-  - title: "Embedding Societal Values into Social Media Algorithms"
-    authors: "Michael Bernstein, Angèle Christin, Jeffrey Hancock, Tatsunori Hashimoto, Chenyan Jia, Michelle S. Lam, Nicole Meister, Nathaniel Persily, Tiziano Piccardi, <b>Martin Saveski</b>, Jeanne Tsai, Johan Ugander, Chunchen Xu"
-    venue: "JOTS'23: Journal of Online Trust and Safety. 2023."
-    paper_pdf: "/assets/publications/2023_embedding_societal_values/paper.pdf"
+  # - title: "The Structure of Toxic Conversations on Twitter"
+  #   authors: "<b>Martin Saveski</b>, Brandon Roy, Deb Roy"
+  #   venue: "WWW'21: The Web Conference 2021"
+  #   paper_pdf: "/assets/publications/2021_dtox/paper.pdf"
+  #   code: "https://github.com/msaveski/toxic_conversation_structure"
+  #   data: "https://doi.org/10.7910/DVN/TRWPVB"
+  #   video: "https://www.youtube.com/watch?v=JLkUgxH92pE"
+  #   selected: y
+
+  - title: "Optimized Feature Generation for Tabular Data via LLMs with Decision Tree Reasoning"
+    authors: "J. Nam*, <b>K. Kim</b>*, S. Oh, J. Tack, J. Kim, J. Shin."
+    venue: "NeurIPS'24: Advances in Neural Information Processing Systems"
+    paper_pdf: "https://arxiv.org/pdf/2406.08527"
+    code: "https://github.com/jaehyun513/OCTree"
     selected: y
 
-  - title: "Counterfactual Evaluation of Peer-Review Assignment Policies"
-    authors: "<b>Martin Saveski</b>, Steven Jecmen, Nihar B. Shah, Johan Ugander"
-    venue: "NeurIPS'23: Advances in Neural Information Processing Systems (Spotlight). 2023."
-    paper_pdf: "/assets/publications/2023_peer_review/paper.pdf"
-    code: "https://github.com/msaveski/counterfactual-peer-review"
+  - title: "Margin Matching Preference Optimization: Enhanced Model Alignment with Granular Feedback"
+    authors: "<b>K. Kim</b>*, A. Seo*, H. Liu, J. Shin, K. Lee."
+    venue: "EMNLP'24 Findings: Findings of the Association for Computational Linguistics: EMNLP 2024"
+    paper_pdf: "https://arxiv.org/pdf/2410.03145"
+    code: "https://github.com/kykim0/margin-matching-pref-opt"
     selected: y
 
-  - title: "Engaging Politically Diverse Audiences on Social Media"
-    authors: "<b>Martin Saveski</b>, Doug Beeferman, David McClure, Deb Roy"
-    venue: "ICWSM'22: International AAAI Conference on Web and Social Media. 2022."
-    paper_pdf: "/assets/publications/2022_newsbridge/paper.pdf"
+  - title: "Confidence-aware Reward Optimization for Fine-tuning Text-to-Image Models"
+    authors: "<b>K. Kim</b>, J. Jeong, M. An, M. Ghavamzadeh, K. Dvijotham, J. Shin, K. Lee"
+    venue: "ICLR'24: International Conference on Learning Representations"
+    paper_pdf: "https://arxiv.org/pdf/2404.01863"
+    data: "https://github.com/kykim0/TextNorm"
     selected: y
 
-  - title: "Perspective-taking to Reduce Affective Polarization on Social Media"
-    authors: "<b>Martin Saveski<sup>‡</sup></b>, Nabeel Gillani<sup>‡</sup>, Ann Yuan, Prashanth Vijayaraghavan, Deb Roy"
-    venue: "ICWSM'22: International AAAI Conference on Web and Social Media. 2022."
-    paper_pdf: "/assets/publications/2022_flipfeed/paper.pdf"
-    code: "https://github.com/msaveski/twitter_perspective_taking"
-    data: "https://github.com/msaveski/twitter_perspective_taking"
+  - title: "Adaptive Algorithms for Efficient Risk Estimation of Black-Box Systems"
+    authors: "<b>K. Kim</b>"
+    venue: "MS thesis, Stanford University"
+    paper_pdf: "/assets/publications/2022_ms_thesis/mscs-thesis.pdf"
     selected: y
 
-  - title: "The Structure of Toxic Conversations on Twitter"
-    authors: "<b>Martin Saveski</b>, Brandon Roy, Deb Roy"
-    venue: "WWW'21: The Web Conference 2021"
-    paper_pdf: "/assets/publications/2021_dtox/paper.pdf"
-    code: "https://github.com/msaveski/toxic_conversation_structure"
-    data: "https://doi.org/10.7910/DVN/TRWPVB"
-    video: "https://www.youtube.com/watch?v=JLkUgxH92pE"
+  - title: "A Deep Reinforcement Learning Approach to Rare Event Estimation"
+    authors: "A. Corso, <b>K. Kim</b>, S. Gupta, G. Gao, M. Kochenderfer"
+    venue: "arXiv preprint arXiv:2211.12470"
+    paper_pdf: "https://arxiv.org/pdf/2211.12470"
     selected: y
 
-  - title: "Social Catalysts: Characterizing People Who Spark Conversations Among Others"
-    authors: "<b>Martin Saveski</b>, Farshad Kooti, Sylvia Morelli Vitousek, Carlos Diuk, Bryce Bartlett, Lada Adamic"
-    venue: "CSCW'21: Conference on Computer-Supported Cooperative Work and Social Computing"
-    paper_pdf: "/assets/publications/2021_social_catalysts/paper.pdf"
-    code: "https://github.com/facebookresearch/social-catalysts"
+  - title: "BEHAVIOR-1K: A Benchmark for Embodied AI with 1,000 Everyday Activities and Realistic Simulation"
+    authors: "C. Li, C. Gokmen, G. Levine, R. Mart´ın-Mart´ın, S. Srivastava, C. Wang, J. Wong, R. Zhang, M. Lingelbach, J. Sun, M. Anvari, M. Hwang, M. Sharma, A. Aydin, D. Bansal, S. Hunter, <b>K. Kim</b>, A. Lou, C. Matthews, I. Villa-Renteria, J. Tang, C. Tang, F. Xia, S. Savarese, H. Gweon, K. Liu, J. Wu, F.-F. Li."
+    venue: "CoRL'22 (oral): Conference on Robot Learning"
+    paper_pdf: "https://proceedings.mlr.press/v205/li23a/li23a.pdf"
+    code: "https://github.com/StanfordVL/OmniGibson"
+    data: "https://behavior.stanford.edu/behavior-1k"
     selected: y
 
-  - title: "Balanced Influence Maximization in the Presence of Homophily"
-    authors: "Md Sanzeed Anwar, <b>Martin Saveski</b>, Deb Roy"
-    venue: "WSDM'21: International Conference on Web Search and Data Mining"
-    paper_pdf: "/assets/publications/2021_balanced_inf_max/paper.pdf"
-    code: "https://github.com/sanzeed/balanced_influence_maximization"
-    data: "https://github.com/sanzeed/balanced_influence_maximization"
-    selected: n
-
-  - title: "Algorithmic and Human Prediction of Success in Human Collaboration From Visual Features"
-    authors: "<b>Martin Saveski<sup>‡</sup></b>, Edmond Awad<sup>‡</sup>, Iyad Rahwan, Manuel Cebrian"
-    venue: "Nature Scientific Reports. 2021"
-    paper_pdf: "/assets/publications/2021_esc_the_room/paper.pdf"
-    code: "https://doi.org/10.7910/DVN/HDT2RN"
-    data: "https://doi.org/10.7910/DVN/HDT2RN"
-    selected: n
-
-  - title: "Testing for Arbitrary Interference on Experimentation Platforms"
-    authors: "Jean Pouget-Abadie, Guillaume Saint-Jacques<sup>‡</sup>, <b>Martin Saveski<sup>‡</sup></b>, Weitao Duan, Souvik Ghosh, Ya Xu, Edo Airoldi"
-    venue: "Biometrika. 2019."
-    paper_pdf: "/assets/publications/2019_biometrika/paper.pdf"
-    selected: n
-
-  - title: "Observational Causal Inference Using Network Information"
-    authors: "Yan Leng, <b>Martin Saveski</b>, Alex ‘Sandy’ Pentland, Dean Eckles"
-    venue: "NeurIPS'19, Workshop on Graph Representation Learning. 2019."
-    selected: n
-
-  - title: "Me, My Echo Chamber, and I: Introspection on Social Media Polarization"
-    authors: "Nabeel Gillani, Ann Yuan, <b>Martin Saveski</b>, Soroush Vosoughi, Deb Roy"
-    venue: "WWW'18: International Conference on the World Wide Web. 2018. <b>(Honarable mention)</b>"
-    paper_pdf: "/assets/publications/2018_social_mirror/paper.pdf"
-    video: "https://drive.google.com/file/d/0B9-P1m1JkZA7UTRuMUFWcTNueXM/view"
+  - title: "Using Machine Translation to Localize Task Oriented NLG Output."
+    authors: "S. Roy, C. Brunk, <b>K. Kim</b>, J. Zhao, M. Freitag, M. Kale, G. Bansal, S. Mudgal, C. Varano."
+    venue: "arXiv preprint arXiv:2107.04512"
+    paper_pdf: "https://arxiv.org/pdf/2107.04512"
     selected: y
 
-  - title: "Detecting Network Effects: Randomizing Over Randomized Experiments"
-    authors: "<b>Martin Saveski<sup>‡</sup></b>, Jean Pouget-Abadie<sup>‡</sup>, Guillaume Saint-Jacques, Weitao Duan, Souvik Ghosh, Ya Xu, Edo Airoldi"
-    venue: "KDD'17: International Conference on Knowledge Discovery and Data Mining. 2017. (Research Track)"
-    paper_pdf: "/assets/publications/2017_detecting_network_effects/paper.pdf"
-    slides: "/assets/publications/2017_detecting_network_effects/slides.pdf"
-    video: "https://www.youtube.com/watch?v=1v5_CzdRVAc"
+  - title: "Taskmaster-1: Toward a Realistic and Diverse Dialog Datase"
+    authors: "B. Byrne, K. Krishnamoorthi, C. Sankar, A. Neelakantan, D. Duckworth, S. Yavuz, B. Goodrich, A. Dubey, A. Cedilnik, <b>K. Kim</b>"
+    venue: "EMNLP-IJCNLP'19: 2019 Conference on Empirical Methods in Natural Language Processing and 9th International Joint Conference on Natural Language Processing"
+    paper_pdf: "https://arxiv.org/pdf/1909.05358"
     selected: y
 
-  - title: "Human Atlas: A Tool for Mapping Social Networks"
-    authors: "<b>Martin Saveski</b>, Eric Chu, Soroush Vosoughi, Deb Roy"
-    venue: "WWW'16: International Conference on the World Wide Web. 2016. (Demo)"
-    paper_pdf: "/assets/publications/2016_human_atlas/paper.pdf"
-    video: "https://www.youtube.com/watch?v=OQOUHkJdA-U"
-    selected: n
-
-  - title: "Topic Modeling in Twitter: Aggregating Tweets by Conversations"
-    authors: "David Alvarez-Melis<sup>‡</sup>, <b>Martin Saveski<sup>‡</sup></b>"
-    venue: "ICWSM'16: International AAAI Conference on Web and Social Media. 2016. (Short Paper)"
-    paper_pdf: "/assets/publications/2016_twitter_topic_modeling/paper.pdf"
-    poster: "/assets/publications/2016_twitter_topic_modeling/poster.pdf"
-    selected: n
-
-  - title: "Tracking the Yak: An Empirical Study of Yik Yak"
-    authors: "<b>Martin Saveski</b>, Sophie Chou, Deb Roy."
-    venue: "ICWSM'16: International AAAI Conference on Web and Social Media. 2016. (Short Paper)"
-    paper_pdf: "/assets/publications/2016_yikyak/paper.pdf"
-    poster: "/assets/publications/2016_yikyak/poster.pdf"
-    selected: n
-
-  - title: "One-Pass Ranking Models for Low-Latency Product Recommendations"
-    authors: "Antonino Freno, <b>Martin Saveski</b>, Rodolphe Jenatton, Cédric Archambeau"
-    venue: "KDD'15: International Conference on Knowledge Discovery and Data Mining. 2015. (Industry Track)"
-    paper_pdf: "/assets/publications/2015_one_pass_ranking_models/paper.pdf"
-    poster: "/assets/publications/2015_one_pass_ranking_models/poster.pdf"
-    slides: "/assets/publications/2015_one_pass_ranking_models/slides.pdf"
+  - title: "Finding Overlapping Communities From Subspaces"
+    authors: "D. Bindel, P. Chew, J. Hopcroft, <b>K. Kim</b>, C. Ponce"
+    venue: "Technical Report'11"
+    paper_pdf: "/assets/publications/2011_community_detect/paper.pdf"
     selected: y
-
-  - title: "Item Cold-Start Recommendations: Learning Local Collective Embeddings"
-    authors: "<b>Martin Saveski</b>, Amin Mantrach."
-    venue: "RecSys'14, ACM Conference Series on Recommender Systems. 2014."
-    paper_pdf: "/assets/publications/2014_item_cold_start/paper.pdf"
-    slides: "/assets/publications/2014_item_cold_start/slides.pdf"
-    code: "https://github.com/msaveski/LCE"
-    selected: y
-
-  - title: "The Geography of Online News Engagement"
-    authors: "<b>Martin Saveski</b>, Daniele Quercia, Amin Mantrach"
-    venue: "Socinfo'14: International Conference on Social Informatics. 2014."
-    paper_pdf: "/assets/publications/2014_geography_of_news/paper.pdf"
-    selected: n
-
-  - title: "Joint semi-supervised Learning of Hidden Conditional Random Fields and Hidden Markov Models"
-    authors: "Yann Soullard, <b>Martin Saveski</b>, Thierry Artières"
-    venue: "Pattern Recognition Letters. 2013."
-    paper_pdf: "/assets/publications/2014_joint_semi_supervised_learning/paper.pdf"
-    selected: n
-
-  - title: "Web Services for Stream Mining: A Stream-Based Active Learning Use Case"
-    authors: "<b>Martin Saveski</b>, Miha Grčar"
-    venue: "ECML'11, Workshop on Planning to Learn and Service-Oriented Knowledge Discovery. 2011."
-    paper_pdf: "/assets/publications/2011_active_learning/paper.pdf"
-    selected: n
-
-  - title: "Automatic Construction of Wordnets by Using Machine Translation and Language Modeling"
-    authors: "<b>Martin Saveski</b>, Igor Trajkovski"
-    venue: "In Proceedings of Seventh Language Technologies Conference. 2010."
-    paper_pdf: "/assets/publications/2010_wordnet_construction/paper.pdf"
-    slides: "/assets/publications/2010_wordnet_construction/slides.pdf"
-    selected: n
-
-  - title: "Development of an English-Macedonian Machine Readable Dictionary by Using Parallel Corpora"
-    authors: "<b>Martin Saveski</b>, Igor Trajkovski"
-    venue: "Proceedings of ICT Innovations Conference. 2010."
-    paper_pdf: "/assets/publications/2010_machine_readable_dictionaries/paper.pdf"
-    selected: n
