--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -26,5 +26,5 @@ experiences:
 
 - place: "Cornell University"
   title: "B.S. Student"
-  subtitle: "Computing Science<br/>Magna cum laude"
+  subtitle: "Computer Science<br/>Applied Mathematics<br/>Magna cum laude"
   category: "school"
