add seal preprint

--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -9,6 +9,13 @@ papers:
   #   video: "https://www.youtube.com/watch?v=JLkUgxH92pE"
   #   selected: y
 
+  - title: "Self-Refining Language Model Anonymizers via Adversarial Distillation"
+    authors: "<b>K. Kim</b><sup>‡</sup>, H. Jeon<sup>‡</sup>, J. Shin"
+    venue: "arXiv preprint arXiv:2506.01420"
+    paper_pdf: "https://arxiv.org/pdf/2506.01420"
+    code: "https://github.com/kykim0"
+    selected: y
+
   - title: "Personalized Language Models via Privacy-Preserving Evolutionary Model Merging"
     authors: "<b>K. Kim</b>, J. Shin, J. Kim"
     venue: "arXiv preprint arXiv:2503.18008"
