--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -86,7 +86,7 @@ papers:
 
   - title: "Taskmaster-1: Toward a Realistic and Diverse Dialog Datase"
     authors: "B. Byrne, K. Krishnamoorthi, C. Sankar, A. Neelakantan, D. Duckworth, S. Yavuz, B. Goodrich, A. Dubey, A. Cedilnik, <b>K. Kim</b>"
-    venue: "EMNLP-IJCNLP'19: 2019 Conference on Empirical Methods in Natural Language Processing and 9th International Joint Conference on Natural Language Processing"
+    venue: "EMNLP-IJCNLP 2019"
     paper_pdf: "https://arxiv.org/pdf/1909.05358"
     data: "https://github.com/google-research-datasets/Taskmaster"
     selected: y
