--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -6,6 +6,12 @@ experiences:
   subtitle: "Graduate School of AI"
   category: "school"
 
+- place: "University of Washington"
+  time: "Aug 2025 - now"
+  title: "Visiting Researcher"
+  subtitle: "Allen School"
+  category: "school"
+
 - place: "Stanford University"
   time: "2021 - 2023"
   title: "M.S. Student"
