--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -13,7 +13,7 @@ papers:
     authors: "<b>K. Kim</b><sup>‡</sup>, H. Jeon<sup>‡</sup>, J. Shin"
     venue: "NeurIPS 2025"
     paper_pdf: "https://arxiv.org/pdf/2506.01420"
-    code: "https://github.com/kykim0"
+    code: "https://github.com/kykim0/SEAL"
     selected: y
 
   - title: "Personalized Language Models via Privacy-Preserving Evolutionary Model Merging"
